[gd_scene load_steps=8 format=3 uid="uid://c0e3lq8maoorb"]

[ext_resource type="Texture2D" uid="uid://bomye0k6iky1d" path="res://assets/gfx/environment/shark/shark.png" id="1_ati4w"]
[ext_resource type="Script" uid="uid://ccvith6jxitba" path="res://src/world/shark/shark.gd" id="2_38dd5"]
[ext_resource type="Script" uid="uid://dsanfc3iwqum4" path="res://addons/random_timer_plugin/random_timer.gd" id="3_a5xvp"]

[sub_resource type="Animation" id="Animation_ati4w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_38dd5"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_a5xvp"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 6, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fsqr"]
_data = {
&"RESET": SubResource("Animation_ati4w"),
&"short_swim": SubResource("Animation_a5xvp"),
&"swim": SubResource("Animation_38dd5")
}

[node name="Shark" type="Sprite2D"]
texture = ExtResource("1_ati4w")
hframes = 4
vframes = 2
frame = 3
script = ExtResource("2_38dd5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6fsqr")
}
autoplay = "swim"

[node name="AppearTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true
autostart = true
script = ExtResource("3_a5xvp")
variance = 2.0
metadata/_custom_type_script = "uid://dsanfc3iwqum4"

[node name="PauseTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true
script = ExtResource("3_a5xvp")
metadata/_custom_type_script = "uid://dsanfc3iwqum4"

[node name="DesistTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="AppearTimer" to="." method="_on_random_timer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
[connection signal="timeout" from="DesistTimer" to="." method="_on_desist_timer_timeout"]
